ultima version del proyecto funciona al 100